Начал работу над ачивками. Добавил начисление XP, отправку запросов в ML

--- a/backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,7 @@ databaseChangeLog:
       file: db/changelog/versions/scenario/01-create_scenarios_table.sql
   - include:
       file: db/changelog/versions/scenario/02-add_test_data.sql
+  - include:
+      file: db/changelog/versions/scenario/03-add_column_scenarios.sql
+  - include:
+      file: db/changelog/versions/achievement/01-create_achievements_table.sql
