--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -1,3 +1,14 @@
 fastapi==0.104.1
 uvicorn==0.24.0
+pydantic==2.5.0
+torch==2.1.2
+transformers==4.37.0
+accelerate==0.25.0
+safetensors==0.4.1
+tokenizers==0.15.1
+protobuf>=3.20.0,<=4.25.1
+numpy==1.24.4
 requests==2.31.0
+typing-extensions==4.8.0
+tokenizers
+#torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 --index-url https://download.pytorch.org/whl/cu121
