--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.5.0
-#torch==2.1.2
+torch==2.1.2
 transformers==4.37.0
 accelerate==0.25.0
 safetensors==0.4.1
